[gd_scene load_steps=71 format=2]

[ext_resource path="res://src/resources/fonts/montserrat_20.tres" type="DynamicFont" id=2]
[ext_resource path="res://src/main/game/player/player.gd" type="Script" id=3]
[ext_resource path="res://src/main/game/player/textures/Player_Idle.png" type="Texture" id=4]
[ext_resource path="res://src/main/game/player/textures/Player_Running.png" type="Texture" id=5]
[ext_resource path="res://src/main/game/player/textures/dash_particle.png" type="Texture" id=6]
[ext_resource path="res://src/main/game/player/textures/bad_gun.png" type="Texture" id=7]
[ext_resource path="res://src/main/game/player/information/shield_bar.tres" type="StyleBox" id=8]
[ext_resource path="res://src/main/game/player/information/health_bar.tres" type="StyleBox" id=9]
[ext_resource path="res://src/main/game/player/information/progress_bar_back.tres" type="StyleBox" id=10]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 19.522, 50.776 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 349, 852 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 349, 0, 349, 852 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 698, 0, 349, 852 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 1047, 0, 349, 852 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 1396, 0, 349, 852 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 1745, 0, 349, 852 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 2094, 0, 349, 852 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 2443, 0, 349, 852 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 852, 349, 852 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 349, 852, 349, 852 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 698, 852, 349, 852 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 1047, 852, 349, 852 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 1396, 852, 349, 852 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 1745, 852, 349, 852 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 2094, 852, 349, 852 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 2443, 852, 349, 852 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 1704, 349, 852 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 349, 1704, 349, 852 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 698, 1704, 349, 852 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 1047, 1704, 349, 852 )

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 1396, 1704, 349, 852 )

[sub_resource type="AtlasTexture" id=23]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 1745, 1704, 349, 852 )

[sub_resource type="AtlasTexture" id=24]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 2094, 1704, 349, 852 )

[sub_resource type="AtlasTexture" id=25]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 2443, 1704, 349, 852 )

[sub_resource type="AtlasTexture" id=26]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 2732, 3584, 683, 896 )

[sub_resource type="AtlasTexture" id=27]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 683, 896 )

[sub_resource type="AtlasTexture" id=28]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 683, 0, 683, 896 )

[sub_resource type="AtlasTexture" id=29]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 1366, 0, 683, 896 )

[sub_resource type="AtlasTexture" id=30]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 2049, 0, 683, 896 )

[sub_resource type="AtlasTexture" id=31]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 2732, 0, 683, 896 )

[sub_resource type="AtlasTexture" id=32]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 896, 683, 896 )

[sub_resource type="AtlasTexture" id=33]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 683, 896, 683, 896 )

[sub_resource type="AtlasTexture" id=34]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 1366, 896, 683, 896 )

[sub_resource type="AtlasTexture" id=35]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 2049, 896, 683, 896 )

[sub_resource type="AtlasTexture" id=36]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 2732, 896, 683, 896 )

[sub_resource type="AtlasTexture" id=37]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 1792, 683, 896 )

[sub_resource type="AtlasTexture" id=38]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 683, 1792, 683, 896 )

[sub_resource type="AtlasTexture" id=39]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 1366, 1792, 683, 896 )

[sub_resource type="AtlasTexture" id=40]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 2049, 1792, 683, 896 )

[sub_resource type="AtlasTexture" id=41]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 2732, 1792, 683, 896 )

[sub_resource type="AtlasTexture" id=42]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 2688, 683, 896 )

[sub_resource type="AtlasTexture" id=43]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 683, 2688, 683, 896 )

[sub_resource type="AtlasTexture" id=44]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 1366, 2688, 683, 896 )

[sub_resource type="AtlasTexture" id=45]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 2049, 2688, 683, 896 )

[sub_resource type="AtlasTexture" id=46]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 2732, 2688, 683, 896 )

[sub_resource type="AtlasTexture" id=47]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 3584, 683, 896 )

[sub_resource type="AtlasTexture" id=48]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 683, 3584, 683, 896 )

[sub_resource type="AtlasTexture" id=49]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 1366, 3584, 683, 896 )

[sub_resource type="AtlasTexture" id=50]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 2049, 3584, 683, 896 )

[sub_resource type="AtlasTexture" id=51]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 2732, 3584, 683, 896 )

[sub_resource type="AtlasTexture" id=52]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 4480, 683, 896 )

[sub_resource type="AtlasTexture" id=53]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 683, 4480, 683, 896 )

[sub_resource type="AtlasTexture" id=54]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 1366, 4480, 683, 896 )

[sub_resource type="AtlasTexture" id=55]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 2049, 4480, 683, 896 )

[sub_resource type="AtlasTexture" id=56]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 2732, 4480, 683, 896 )

[sub_resource type="AtlasTexture" id=57]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 4480, 683, 896 )

[sub_resource type="SpriteFrames" id=58]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ) ],
"loop": true,
"name": "idle",
"speed": 12.0
}, {
"frames": [ SubResource( 26 ) ],
"loop": true,
"name": "air2",
"speed": 5.0
}, {
"frames": [ SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 42 ), SubResource( 43 ), SubResource( 44 ), SubResource( 45 ), SubResource( 46 ), SubResource( 47 ), SubResource( 48 ), SubResource( 49 ), SubResource( 50 ), SubResource( 51 ), SubResource( 52 ), SubResource( 53 ), SubResource( 54 ), SubResource( 55 ), SubResource( 56 ) ],
"loop": true,
"name": "run",
"speed": 40.0
}, {
"frames": [ SubResource( 57 ) ],
"loop": true,
"name": "air",
"speed": 5.0
} ]

[sub_resource type="Curve" id=59]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.0291631 ), -2.74067, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=60]
curve = SubResource( 59 )

[sub_resource type="ParticlesMaterial" id=61]
emission_shape = 1
emission_sphere_radius = 1.0
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 19.0
angular_velocity = -193.85
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale_curve = SubResource( 60 )

[node name="Player" type="KinematicBody2D" groups=[
"Collision",
"Hittable",
]]
position = Vector2( 0, 2.52269 )
script = ExtResource( 3 )

[node name="Hitbox" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Hitbox"]
scale = Vector2( 0.12, 0.12 )
frames = SubResource( 58 )
animation = "idle"

[node name="Gun" type="Sprite" parent="."]
position = Vector2( 53.9391, 0.374611 )
texture = ExtResource( 7 )

[node name="BulletExit" type="Node2D" parent="Gun"]
position = Vector2( 18.7486, -7.38251 )

[node name="PlayerInformation" type="VBoxContainer" parent="."]
margin_left = -29.0
margin_top = -105.0
margin_right = 28.0
margin_bottom = -55.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="PlayerInformation"]
margin_right = 57.0
margin_bottom = 23.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color_shadow = Color( 0.941176, 0.588235, 0.243137, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 2
text = "Name"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShieldBar" type="ProgressBar" parent="PlayerInformation"]
margin_top = 27.0
margin_right = 57.0
margin_bottom = 36.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/fg = ExtResource( 8 )
custom_styles/bg = ExtResource( 10 )
max_value = 10.0
value = 10.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthBar" type="ProgressBar" parent="PlayerInformation"]
margin_top = 40.0
margin_right = 57.0
margin_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/fg = ExtResource( 9 )
custom_styles/bg = ExtResource( 10 )
max_value = 10.0
value = 10.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Dashing" type="Node" parent="."]

[node name="DashTimer" type="Timer" parent="Dashing"]
one_shot = true

[node name="DashParticles" type="Particles2D" parent="Dashing"]
position = Vector2( 0, 2.52269 )
emitting = false
amount = 100
one_shot = true
local_coords = false
process_material = SubResource( 61 )
texture = ExtResource( 6 )

[node name="Camera" type="Camera2D" parent="."]
position = Vector2( 0, -1.52269 )
current = true
